# flux-genome-py

./: README.md  pyproject.toml
flux_genome/: __init__.py  builtins.py  expression.py  gene.py  genome.py  music_expression.py  ribosome.py
flux_genome.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_flux_genome.py  test_genome_extended.py
