[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "flux-genome"
version = "0.1.0"
description = "Genetic expression engine for constraint-theory — one fixed genome, adaptive protein expression"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
dependencies = ["numpy>=1.20"]

[project.optional-dependencies]
dev = ["pytest>=7"]

[tool.setuptools.packages.find]
include = ["flux_genome*"]
